# certify

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/certify/reference/: extensions.adoc
examples/: get_page.cpp
include/boost/certify/: crlset_parser.hpp  extensions.hpp  https_verification.hpp
include/boost/certify/detail/: keystore_windows.ipp  spki_digest.hpp  status_cache.hpp
include/boost/certify/impl/: crlset_parser.ipp  extensions.hpp  https_verification.hpp  https_verification.ipp
tests/: CMakeLists.txt  crl_set_parser.cpp  extensions.cpp  https_verification_fail.cpp  https_verification_success.cpp
tests/extras/include/boost/certify/: verification_utils.hpp
tests/res/fail_chains/: revoked.badssl.com.crt
